# cart_api/database.py
@@ -10,7 +10,8 @@ from playhouse.postgres_ext import (
     AutoField,
     CharField,
     DoubleField,
-    BooleanField
+    BooleanField,
+    IntegerField
 )
 
 database = os.environ.get("POSTGRES_DB", "bootcamp")
@@ -87,6 +88,11 @@ class DatabaseProducts(BaseModel):
 # Define an ORM class called DatabaseCartItem which inherits from BaseModel
 # and has the properties and types defined by your swagger spec.
 # if neccesary, update EXAMPLE_CART_ITEM in cart_api_tests/test_exercises.py to match
+class DatabaseCartItem(BaseModel):
+    id = AutoField(primary_key=True)
+    name = CharField()
+    price = DoubleField()
+    quantity = IntegerField()
 
 
 # BOOTCAMPERS: Don't modify anything below
